# minesweeper

./: CLAUDE.md  Cargo.toml  Dockerfile  LICENSE
.github/: dependabot.yml
.github/workflows/: ci.yaml
client/: Cargo.toml
client/examples/: client_example.rs  game_example.rs
client/src/: client.rs  game.rs  lib.rs  websocket.rs
common/: Cargo.toml
common/src/: models.rs  protocol.rs
server/: Cargo.toml
server/src/: cleanup.rs  cors.rs  lib.rs  main.rs  rate_limit.rs
server/src/data/: mod.rs
server/src/logic/: mod.rs
server/src/routes/: mod.rs
src/: cleanup.rs  lib.rs  main.rs  rate_limit.rs
src/data/: mod.rs
src/logic/: mod.rs
src/model/: api.rs  client.rs  mod.rs  server.rs
src/routes/: mod.rs
