[workspace]
members = [
    "common",
    "server", 
    "client"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
tracing = "0.1.41"

