[package]
name = "minesweeper-client"
version = "0.1.0"
edition = "2024"
description = "Rust client library for the minesweeper multiplayer server"

[dependencies]
minesweeper-common = { path = "../common" }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = "1.0.142"
tokio = { workspace = true }
tokio-tungstenite = { version = "0.27", features = ["rustls"] }
tracing = { workspace = true }
url = "2.5"
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3.20"
