[package]
name = "minesweeper-server"
version = "0.1.0"
edition = "2024"
description = "Minesweeper multiplayer server"

[[bin]]
name = "minesweeper-server"
path = "src/main.rs"

[dependencies]
minesweeper-common = { path = "../common" }
dashmap = "6.1.0"
nanoid = "0.4.0"
rand = "0.9.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_ws = "0.1.1"
serde = { workspace = true }
serde_json = "1.0.145"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.20"
uuid = { workspace = true }