[package]
name = "minesweeper-server"
version = "1.0.0"
edition = "2024"
description = "Minesweeper multiplayer server"
license = "MIT"
repository = "https://github.com/WithoutAName25/minesweeper"
homepage = "https://github.com/WithoutAName25/minesweeper"
keywords = ["minesweeper", "game", "server", "multiplayer"]
categories = ["games", "network-programming", "web-programming"]

[[bin]]
name = "minesweeper-server"
path = "src/main.rs"

[dependencies]
minesweeper-common = "1.0.0"
dashmap = "6.1.0"
nanoid = "0.4.0"
rand = "0.9.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_ws = "0.1.1"
serde = { workspace = true }
serde_json = "1.0.142"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.20"
uuid = { workspace = true }
